<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/labelMessage"
            android:text="@string/messageLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/message"
            android:background="#dddddd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text|textCapSentences|textMultiLine"
            android:gravity="top"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/decryptButton"
        android:id="@+id/decryptBtn" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context=".MainActivity"
        android:background="#336699"
        android:orientation="vertical"
        android:id="@+id/cipherLayout">
        <TextView
            android:id="@+id/labelCipher"
            android:text="@string/cipherLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/alpha"
            android:text="@string/alphabet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:typeface="monospace"
            />
        <TextView
            android:id="@+id/code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:typeface="monospace"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/labelEncrypted"
            android:text="@string/decryptLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/decryptedMessage"
            android:background="#dddddd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            />
    </LinearLayout>
</LinearLayout>
